# AgentDemo

./: .gitignore  README.md  bootstrap.sh  langgraph.json  pyproject.toml  server.py
src/deep_research/: deep_researcher.py  utils.py  workflow.py
src/deep_research/agents/: __init__.py  agents.py
src/deep_research/config/: __init__.py  agents.py  configuration.py  loader.py  questions.py  report_style.py  tools.py
src/deep_research/crawler/: __init__.py  article.py  crawler.py  jina_client.py  readability_extractor.py
src/deep_research/graph/: builder.py  checkpoint.py  nodes.py  types.py
src/deep_research/llms/: __init__.py  llm.py
src/deep_research/llms/providers/: dashscope.py
src/deep_research/prompt_enhancer/: __init__.py  builder.py  enhancer_node.py  state.py
src/deep_research/prompts/: __init__.py  coordinator.md  planner_model.py  template.py
src/deep_research/rag/: __init__.py  builder.py  ragflow.py  retriever.py  vikingdb_knowledge_base.py
src/deep_research/tools/: __init__.py  crawl.py  decorators.py  python_repl.py  retriever.py  search.py
src/deep_research/tools/tavily_search/: tavily_search_api_wrapper.py  tavily_search_results_with_images.py
src/deep_research/utils/: __init__.py  json_utils.py
src/deer_flow/: workflow.py
src/deer_flow/agents/: agents.py
src/deer_flow/config/: configuration.py  questions.py
src/deer_flow/graph/: builder.py  checkpoint.py  nodes.py  types.py
src/deer_flow/llms/: llm.py
src/deer_flow/ppt/: builder.py  ppt_composer_node.py  ppt_generator_node.py  state.py
src/deer_flow/prompt_enhancer/: builder.py  enhancer_node.py  state.py
src/deer_flow/prompts/: template.py
src/deer_flow/rag/: builder.py  ragflow.py  retriever.py  vikingdb_knowledge_base.py
src/deer_flow/tools/: __init__.py  crawl.py  retriever.py  search.py
src/deer_flow/tools/tavily_search/: tavily_search_results_with_images.py
src/server/: __init__.py  app.py  chat_request.py  config_request.py  mcp_request.py  mcp_utils.py  rag_request.py
web/: README.md  eslint.config.js  next.config.js  package.json  postcss.config.js  prettier.config.js
web/messages/: en.json  zh.json
web/public/replay/: github-top-trending-repo.txt
web/src/: env.js  i18n.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/chat/: main.tsx  page.tsx
web/src/components/deep-research/: fav-icon.tsx  image.tsx  language-switcher.tsx  loading-animation.tsx  logo.tsx  markdown.tsx  message-input.tsx  rainbow-text.tsx  report-style-dialog.tsx  resource-mentions.tsx  resource-suggestion.tsx  rolling-text.tsx  scroll-container.tsx  theme-provider-wrapper.tsx  theme-toggle.tsx  toaster.tsx  tooltip.tsx
web/src/lib/: utils.ts
(+70 files in other folders)
